--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -54,7 +54,7 @@
     .header-logo-text p {
       font-size: 0.85em;
       margin: 0;
-      color: #e0e8ff; /* Lighter color for tagline */
+      color: gold; /* Lighter color for tagline */
     }
     .header-contact {
       display: flex;
@@ -85,7 +85,7 @@
 
     .main-container h2 {
       margin: 0 0 25px 0;
-      color: #00796b; /* Teal accent */
+      color: #5555555; /* Teal accent */
       font-size: 1.8em;
       text-align: center;
     }
@@ -140,7 +140,7 @@
     .qr-header p {
       margin: 5px 0 15px 0;
       font-weight: bold;
-      color: #1a237e; /* Dark blue */
+      color: #ffffff; /* Dark blue */
       font-size: 1.1em;
     }
     #qrPlaceholder .placeholder-logo {
@@ -248,9 +248,9 @@
 
     /* Footer */
     .app-footer {
-      background-color: #343a40; /* Dark charcoal from screenshot */
+      background-color: #112233; /* Dark charcoal from screenshot */
       color: white;
-      padding: 25px 20px;
+      padding: 25px 2px;
       text-align: center;
       flex-shrink: 0;
     }
@@ -277,13 +277,14 @@
   <div class="header-logo">
     <i class="fas fa-briefcase icon-briefcase"></i>
     <div class="header-logo-text">
-      <h1>UPI QR GENERATOR            </h1>
+      <h1>UPI QR GENERATOR</h1>
       <p>Your Trusted Digital Partner</p>
     </div>
   </div>
   <div class="header-contact">
-    <i class="fas fa-envelope icon-envelope"></i>
-    <a href="mailto:contact@yourcompany.com"></a>
+   <a href="https://wa.me/9748437602" class="whatsapp-button" target="_blank" title="Chat on WhatsApp">
+  <i class="fab fa-whatsapp"></i> WhatsApp
+</a>
   </div>
 </header>
 
@@ -340,10 +341,10 @@
 <footer class="app-footer">
   <div class="social-icons">
     <a href="https://www.facebook.com/share/14DyjrZ1qHW/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-    <a href="#" aria-label="RSS Feed"><i class="fas fa-rss"></i></a>
-  </div>
+    <a href="#" aria-label="Twitter"><i class="fab fa-youtube"></i></a>
+    <a href="#" aria-label="LinkedIn"><i class="fab fa-instagram"></i></a>
+    <a href=""><i class="fa-brands fa-google-pay"></i></a>
+    </div>
   <p class="footer-copyright">&copy; 2025 Arif Digital Services. All Rights Reserved.</p>
 </footer>
 
@@ -353,8 +354,8 @@
     size: 220,
     level: 'H',
     padding: 10,
-    foreground: '#000000',
-    background: '#FFFFFF',
+    foreground: ' red',
+    background: ' blue',
   });
 
   function validateAmount(input) {
