--- a/check.html
+++ b/check.html
@@ -25,7 +25,6 @@
       line-height: 1.6;
     }
 
-    /* Hero Section */
     .hero {
       padding: 60px 20px;
       text-align: center;
@@ -86,7 +85,6 @@
       background: #c62828;
     }
 
-    /* Main Content */
     main {
       padding: 40px 20px;
       text-align: center;
@@ -104,6 +102,7 @@
       border-radius: 12px;
       border: 1px solid #ccc;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
+      display: none;
     }
 
     .loading-spinner {
@@ -114,13 +113,13 @@
       border-radius: 50%;
       animation: spin 1s linear infinite;
       margin: 20px auto;
+      display: none;
     }
 
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
 
-    /* Partner Banner */
     .partner-banner {
       position: relative;
       overflow: hidden;
@@ -171,7 +170,6 @@
       100% { transform: translateX(-100%); }
     }
 
-    /* Footer */
     .footer {
       background-color: #111;
       color: #fff;
@@ -204,7 +202,6 @@
 
 <body>
 
-  <!-- Hero Section -->
   <section class="hero">
     <h1>Employee Verification Portal</h1>
     <p>Verify Agent details seamlessly and securely.</p>
@@ -215,25 +212,16 @@
     </div>
   </section>
 
-  <!-- Main Content -->
   <main>
     <section class="intro">
       <h2>Agent ID Card</h2>
-      <div id="loading" class="loading-spinner" style="display: none;"></div>
-      <img id="agentImage" alt="Agent ID Card" class="responsive-image" src="./bdl-arifgoldar-google-pay.png">
+      <div id="loading" class="loading-spinner"></div>
+      <img id="agentImage" alt="Agent ID Card" class="responsive-image" src="bdl-arifgoldar-google-pay.png">
     </section>
   </main>
 
-  <!-- Partner Banner Section -->
   <div class="partner-banner">
     <div class="partner-slider">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Paytm_logo.png/320px-Paytm_logo.png" alt="Paytm">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Google_Pay_Logo.svg/320px-Google_Pay_Logo.svg.png" alt="Google Pay">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Meta_Platforms_Inc._logo.svg" alt="Meta">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Netflix_logo.svg" alt="Netflix">
-      <!-- Repeat -->
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Paytm_logo.png/320px-Paytm_logo.png" alt="Paytm">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Google_Pay_Logo.svg/320px-Google_Pay_Logo.svg.png" alt="Google Pay">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
@@ -243,7 +231,6 @@
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer">
     Want To Become an Agent?
     <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
@@ -255,26 +242,29 @@
     </div>
   </footer>
 
-  <!-- JavaScript (optional) -->
   <script>
-    const agentSearch = document.getElementById('agentSearch');
-    const searchBtn = document.getElementById('searchBtn');
-    const clearBtn = document.getElementById('clearBtn');
-    const loading = document.getElementById('loading');
-    const agentImage = document.getElementById('agentImage');
+    document.addEventListener("DOMContentLoaded", () => {
+      const agentSearch = document.getElementById('agentSearch');
+      const searchBtn = document.getElementById('searchBtn');
+      const clearBtn = document.getElementById('clearBtn');
+      const loading = document.getElementById('loading');
+      const agentImage = document.getElementById('agentImage');
 
-    searchBtn.addEventListener('click', () => {
-      loading.style.display = 'block';
-      agentImage.style.display = 'none';
-      setTimeout(() => {
-        loading.style.display = 'none';
-        agentImage.style.display = 'block';
-      }, 1500);
-    });
+      searchBtn.addEventListener('click', () => {
+        loading.style.display = 'block';
+        agentImage.style.display = 'none';
+        setTimeout(() => {
+          loading.style.display = 'none';
+          agentImage.style.display = 'block';
+        }, 1500);
+      });
 
-    clearBtn.addEventListener('click', () => {
-      agentSearch.value = '';
+      clearBtn.addEventListener('click', () => {
+        agentSearch.value = '';
+        agentImage.style.display = 'none';
+      });
     });
   </script>
+
 </body>
 </html>
